# UdeS_Infographie_1

./: .gitattributes  .gitignore  CMakeLists.txt  PetitMoteur3D.sln  README.MD  blender_map_exporter.py  corps.mtl  rebuild.bat
GameTest/: CMakeLists.txt  CameraFollowComponent.h  GameTest.vcxproj  GameTest.vcxproj.filters  Heightmap.h
GameTest/GameTest/: CustomCube.h  CustomPlane.h  GameTest.cpp  GameTest.h  Heightmap.h  Pine.h  RestartEvent.cpp  RestartEvent.h  TimeScaleTest.cpp  TimeScaleTest.h  Tunnel.h
GameTest/GameTest/Components/: CameraFollowComponent.cpp  CameraFollowComponent.h  CameraMoverComponent.h  JointsBreakerComponent.h  LightMoverComponent.h  MovableComponent.h  SizeModifierComponent.cpp  SizeModifierComponent.h  SkierDeleter.h  SkierSpawner.cpp  SkierSpawner.h  SnowMover.h  SnowRenderer.cpp  SnowRenderer.h  ToggleOnSkierComponent.h  TournerComponent.cpp  TournerComponent.h  WalkSoundComponent.cpp  WalkSoundComponent.h
GameTest/GameTest/Components/LoadingScene/: CameraMoverComponent.cpp  CameraMoverComponent.h  LoadingSceneComponent.cpp  LoadingSceneComponent.h  LoadingTextUI.cpp  LoadingTextUI.h
GameTest/GameTest/Components/MainScene/: PauseComponent.cpp  PauseComponent.h
GameTest/GameTest/Components/Skiers/: SkiersMultiRenderer.cpp  SkiersMultiRenderer.h
GameTest/GameTest/Event/: GameOverEvent.h  GameStartEvent.h  PauseEvent.h
GameTest/GameTest/Objects/: Left_ski.h  Pine.h  Right_Ski.h  Skier.h  objWithChargeur.h
GameTest/GameTest/Objects/LoadingScene/: CustomCube.h  CustomPlane.h
GameTest/GameTest/Objects/MainScene/: Map.cpp  Map.h
GameTest/GameTest/Objects/Sphere/: Sphere.cpp  Sphere.h  SphereRenderer.cpp  SphereRenderer.h  SphereShader.cpp  SphereShader.h
GameTest/GameTest/Scenes/: LoadingScene.cpp  LoadingScene.h  MainScene.cpp  MainScene.h
GameTest/GameTest/Shader/: SnowShader.cpp  SnowShader.h
GameTest/GameTest/UI/: FadeWhiteComponent.cpp  FadeWhiteComponent.h  GameUI.cpp  GameUI.h  TestUIObject.cpp  TestUIObject.h  TimerDisplay.cpp  TimerDisplay.h
GameTest/GameTest/UI/Menus/: MainMenuUI.cpp  MainMenuUI.h
GameTest/GameTest/UI/SpeedDisplay/: SpeedDisplay.cpp  SpeedDisplay.h  SpeedDisplayShader.cpp  SpeedDisplayShader.h
GameTest/GameTest/_BILLBOARD_RENDERER_TEST/: BRTScene.cpp  BRTScene.h
GameTest/GameTest/_DRAW_INSTANCED_TEST/: DITScene.cpp  DITScene.h
GameTest/GameTest/_NEW_UI_TEST/: NewUIScene.cpp  NewUIScene.h
GameTest/GameTest/_SHADOWTEST/: ShadowtestScene.cpp  ShadowtestScene.h
GameTest/GameTest/_SNOWBALL_RENDER/: SRScene.cpp  SRScene.h
GameTest/GameTest/_SNOW_RENDER_ON_REAL_MAP/: SRORMScene.cpp  SRORMScene.h
PM3DApi/: CMakeLists.txt  PM3DApi.vcxproj  PM3DApi.vcxproj.filters
PM3DApi/Api/Private/: GameHost.cpp
PM3DApi/Api/Private/Camera/: Camera.cpp  Frustrum.cpp
PM3DApi/Api/Private/Component/: Component.cpp  ContainerComponent.cpp  UIComponent.cpp
PM3DApi/Api/Private/Debug/: DebugRenderer.cpp  FPSDebugRenderer.cpp  SceneHierarchyDebugRenderer.cpp
PM3DApi/Api/Private/GameObject/: GameObject.cpp  UICanvas.cpp  UIObject.cpp
PM3DApi/Api/Private/Input/: Input.cpp  MouseClickEvent.h
PM3DApi/Api/Private/Light/: AmbiantLight.cpp  DirectionalLight.cpp  Light.cpp  PointLight.cpp  ShadowProcessor.cpp  ShadowProcessor.h  SpotLight.cpp
PM3DApi/Api/Private/Scene/: Scene.cpp
PM3DApi/Api/Private/Shader/: Shader.cpp
PM3DApi/Api/Private/UICanvas/: UICanvas.cpp
PM3DApi/Api/Private/UIObject/: UIObject.cpp
PM3DApi/Api/Private/Util/: FileWatcher.cpp  (+3 more)
PM3DApi/Api/Public/: GameHost.h
PM3DApiDefaultImpl/: CMakeLists.txt  PM3DApiDefaultImpl.cpp  PM3DApiDefaultImpl.vcxproj  PM3DApiDefaultImpl.vcxproj.filters
PetitMoteur3D/: Bloc.cpp  Bloc.h  CBlocEffet1.cpp  CBlocEffet1.h  CMakeLists.txt  DebugTexture.dds  GestionnaireDeTextures.cpp  Horloge.cpp  Horloge.h  InfoDispositif.cpp  MiniPhong.fx  Moteur.h  MoteurWindows.cpp  MoteurWindows.h  NewShader.fx  Objet3D.h  PetitMoteur3D.aps  PetitMoteur3D.cpp  PetitMoteur3D.rc  PetitMoteur3D.vcxproj  ShadowMap.fx  SnowShader.fx  SnowShader_tesselate.fx  Sprite1.fx  Test1.fx  Texture.cpp  Texture.h  UneTexture.dds  albedo.dds  dispositifD3D11.cpp  dispositifD3D11.h  heightMap.mtl  imgui.ini  light.dds  normal.dds  sommetbloc.cpp  sommetbloc.h  sparkles.dds  stdafx.cpp  stdafx.h  (+5 more)
PetitMoteur3D/Core/Imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_win32.cpp  imgui_tables.cpp  imgui_widgets.cpp
PetitMoteur3D/DefaultObj/: cube.mtl  plane.mtl
PetitMoteur3D/Private/Core/: Horloge.cpp  InfoDispositif.cpp  MoteurWindows.cpp  PetitMoteur3D.cpp  dispositif.cpp  dispositifD3D11.cpp
PetitMoteur3D/Private/Mesh/: ObjectMesh.cpp  sommetbloc.cpp
PetitMoteur3D/Private/Object/: Bloc.cpp
PetitMoteur3D/Private/Sprite/: AfficheurSprite.cpp  SpriteTemp.cpp
PetitMoteur3D/Private/Texture/: Texture.cpp
PetitMoteur3D/Private/Util/: ChargeurOBJ.cpp  Util.cpp
PetitMoteur3D/Public/Core/: InfoDispositif.h  Moteur.h  MoteurWindows.h  PetitMoteur3D.h  dispositifD3D11.h
PetitMoteur3D/Public/Mesh/: ObjectMesh.h  chargeur.h
PetitMoteur3D/Public/Object/: Bloc.h  CBlocEffet1.h
PetitMoteur3D/Public/Sprite/: AfficheurSprite.h  SpriteTemp.h
PetitMoteur3D/Public/Texture/: Texture.h
PetitMoteur3D/Public/Util/: Singleton.h
PetitMoteur3D/shader/: Sprite1.fx  Test1.fx
PetitMoteur3D/x64/Debug/: PetitMoteur3D.exe.recipe  PetitMoteur3D.ilk  PetitMoteur3D.res
PetitMoteur3D/x64/Release/: PetitMoteur3D.exe.recipe  PetitMoteur3D.iobj  PetitMoteur3D.ipdb
PetitMoteur3DCore/: CMakeLists.txt  PetitMoteur3D.vcxproj  PetitMoteur3D.vcxproj.filters  imgui.ini
PetitMoteur3DCore/Core/Imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_win32.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
PetitMoteur3DCore/data/: imgui.ini
PetitMoteur3DCore/data/Map/: map_data.json
PetitMoteur3DCore/data/shader/: NewShader.fx  NewShaderInstanced.fx  PostEffect.fx  SkyShader.fx  SnowShader.fx  SnowShader_tesselate.fx  SpeedShader.fx  SphereShader.fx  Sprite1.fx  TextShader.fx
(+273 files in other folders)
